--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
     android:width="108dp"
     android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:tint="#00FF00"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <group
+        android:scaleX="0.493"
+        android:scaleY="0.493"
+        android:translateX="6.084"
+        android:translateY="6.084">
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M12,23c5.7,0 10.39,-4.34 10.95,-9.9c0.06,-0.59 -0.41,-1.1 -1,-1.1c-0.51,0 -0.94,0.38 -0.99,0.88C20.52,17.44 16.67,21 12,21c-3.12,0 -5.87,-1.59 -7.48,-4L6,17c0.55,0 1,-0.45 1,-1s-0.45,-1 -1,-1H2c-0.55,0 -1,0.45 -1,1v4c0,0.55 0.45,1 1,1c0.55,0 1,-0.45 1,-1l0,-1.67C4.99,21.15 8.28,23 12,23zM12,1C6.3,1 1.61,5.34 1.05,10.9C1,11.49 1.46,12 2.05,12c0.51,0 0.94,-0.38 0.99,-0.88C3.48,6.56 7.33,3 12,3c3.12,0 5.87,1.59 7.48,4L18,7c-0.55,0 -1,0.45 -1,1c0,0.55 0.45,1 1,1h4c0.55,0 1,-0.45 1,-1V4c0,-0.55 -0.45,-1 -1,-1s-1,0.45 -1,1l0,1.67C19.01,2.85 15.72,1 12,1zM11.12,5.88C11.12,5.39 11.52,5 12,5s0.88,0.39 0.88,0.88l0,0.37c1.07,0.19 1.75,0.76 2.16,1.3c0.34,0.44 0.16,1.08 -0.36,1.3C14.32,9 13.9,8.88 13.66,8.57c-0.28,-0.38 -0.78,-0.77 -1.6,-0.77c-0.7,0 -1.81,0.37 -1.81,1.39c0,0.95 0.86,1.31 2.64,1.9c2.4,0.83 3.01,2.05 3.01,3.45c0,2.62 -2.5,3.13 -3.02,3.22l0,0.37c0,0.48 -0.39,0.88 -0.88,0.88s-0.88,-0.39 -0.88,-0.88l0,-0.42c-0.63,-0.15 -1.93,-0.61 -2.69,-2.1c-0.23,-0.44 0.03,-1.02 0.49,-1.2c0.41,-0.16 0.9,-0.01 1.11,0.38c0.32,0.61 0.95,1.37 2.12,1.37c0.93,0 1.98,-0.48 1.98,-1.61c0,-0.96 -0.7,-1.46 -2.28,-2.03c-1.1,-0.39 -3.35,-1.03 -3.35,-3.31c0,-0.1 0.01,-2.4 2.62,-2.96L11.12,5.88z" />
+    </group>
 </vector>
